Full screen mode isn't properly restored after window minimize
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox108 | --- | wontfix |
| firefox109 | --- | wontfix |
| firefox110 | --- | verified |
People
(Reporter: sveterv, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to reproduce:
- start Firefox
- hit F11 (to get fullscreen mode)
- hit Minimize icon to minimize Firefox window
- restore Firefox window with Alt+Tab or any other method
Actual results:
Before we minimized Firefox window it was in full screen mode while after restoring it is in normal window mode
Expected results:
Firefox window should be restored in fullscreen mode
Problem appeared in 103 version of Firefox and is still there. 102 version is working fine. I'm using Ubuntu Mate 20.04LTS with all updates till this moment, I've checked this in Ubuntu Mate 22.04 LTS, Ubuntu 22.10 and the bug is still there. Every version of Firefox from 103 to newest 108 does have it so you need to look at 103 version only probably and check what caused problem there.
Comment 2•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Session Restore' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
(In reply to Release mgmt bot [:suhaib / :marco/ :calixte] from comment #2)
The Bugbug bot thinks this bug should belong to the 'Firefox::Session Restore' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
I don't think it's related to 'Firefox::Session Restore' because I'm NOT CLOSING Firefox completely but just MINIMIZE it's window
Comment 4•3 years ago
•
|
||
I have managed to reproduce the issue using Firefox 108.0.2 and Nightly 110.0a1 on Ubuntu 20.04, it does not occur on any other platform.
Mozregression returned the following pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=69de1289762ed48657770b53661f6c21e801f8b8&tochange=2c7ec3e5aec8fe3c73565d1820e5cd0145d0fd35
I believe Bug 1773118 might've caused it.
Emilio, could you take a look over this?
Thank you for reporting!
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 5•3 years ago
|
||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
| bugherder | ||
Comment 8•3 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox109towontfix.
For more information, please visit auto_nag documentation.
Comment 9•3 years ago
|
||
I have verified the fix on Nightly 110.0a1 (20230113904038)
Updated•3 years ago
|
Updated•3 years ago
|
Description
•