Bug 1809113 - Allow minimized and fullscreen state to co-exist. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D166437